Stop compositing before destroying the workspace and compositor

Both the Compositor and the Workspace are coupled very strongly,
unfortunately. This creates a series of issues when kwin starts and
stops. It's an architectural problem.

At shutdown, the compositor is destroyed after the workspace, but the
render scheduling code needs the workspace. This change makes kwin stop
compositing before destroying the two to make the teardown process less
surprising.

BUG: 521954